bring up-to-date with turbine/velocity
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,7 +1,11 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.14 2001/03/27 04:41:57 jon Exp $
+# $Id: TurbineResources.properties,v 1.15 2001/03/27 04:48:08 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
+#
+# Note that strings containing "," (comma) characters must backslash 
+# escape the comma (i.e. '\,')
+#
 # -------------------------------------------------------------------
 
 # -------------------------------------------------------------------
@@ -9,14 +13,14 @@
 #  L O G S
 #
 # -------------------------------------------------------------------
-# The full path name to a log file.  If not given, commands to log
-# events using org.apache.turbine.util.Log will be ignored.  This file
-# must already exist and be writable.
+# This is the configuration for the logging system. In most cases
+# you don't need to modify anything. However, if you wish to add more
+# facilities or modify the existing settings, then you can do so.
 #
-# Default: none
+# destination.file: A path relative to the web app root
 # -------------------------------------------------------------------
 
-services.TurbineLoggingService.facilities=system
+services.TurbineLoggingService.facilities=system,debug,security
 services.TurbineLoggingService.default=system
 services.TurbineLoggingService.loggingConfig=org.apache.turbine.services.logging.PropertiesLoggingConfig
 
@@ -24,6 +28,61 @@ services.TurbineLoggingService.loggingConfig=org.apache.turbine.services.logging
 services.TurbineLoggingService.system.destination.file=/logs/turbine.log
 services.TurbineLoggingService.system.className=org.apache.turbine.services.logging.FileLogger
 services.TurbineLoggingService.system.level=INFO
+
+# A facitly for the scheduler service
+# To disable started/stopped messages set the level to ERROR
+services.TurbineLoggingService.scheduler.destitnation.file=/logs/turbine.log
+services.TurbineLoggingService.scheduler.className=org.apache.turbine.services.logging.FileLogger
+services.TurbineLoggingService.scheduler.level=INFO
+
+
+# A facility for debugging applications. Messages will go both
+# to the log file and the server console.
+services.TurbineLoggingService.debug.destination.file=/logs/turbine.log
+services.TurbineLoggingService.debug.destination.console=true
+services.TurbineLoggingService.debug.className=org.apache.turbine.services.logging.FileLogger
+services.TurbineLoggingService.debug.level=INFO
+
+# A facility for security audit. NOTE! As of 23 Jan 2001
+# Turbine does not have any standard security auditing
+# functionality. It's up to your application.
+services.TurbineLoggingService.security.destination.file=/logs/turbine.log
+services.TurbineLoggingService.security.className=org.apache.turbine.services.logging.FileLogger
+services.TurbineLoggingService.security.level=INFO
+
+# An example configuration for automatic log rotation using Log4Java
+# This will keep the log file size under 1MB and save up to 5 backup copies
+services.TurbineLoggingService.rotation.destination.file=/logs/turbine.log
+services.TurbineLoggingService.rotation.file.size=1048576
+services.TurbineLoggingService.rotation.file.backups=5
+services.TurbineLoggingService.rotation.className=org.apache.turbine.services.logging.Log4JavaLogger
+services.TurbineLoggingService.rotation.level=INFO
+
+# An example configuration for using *NIX syslogd with Log4Java
+services.TurbineLoggingService.syslog.destination.syslogd.host=my.syslog.server.com
+services.TurbineLoggingService.syslog.destination.syslogd.facility=LOG_DAEMON
+services.TurbineLoggingService.syslog.className=org.apache.turbine.services.logging.Log4JavaLogger
+services.TurbineLoggingService.syslog.level=INFO
+
+# An example configuration for using remote Log4Java server
+services.TurbineLoggingService.remote.destination.remote.host=my.remote.server.com
+services.TurbineLoggingService.remote.destination.remote.port=1099
+services.TurbineLoggingService.remote.className=org.apache.turbine.services.logging.Log4JavaLogger
+services.TurbineLoggingService.remote.level=INFO
+
+# An example configuration for sending error reports as email with Log4Java
+# notes: 
+# * uses 'mail.server' as SMTP server to send mail through
+# * log4j will send the email when an ERROR is logged, with
+#   'buffer.size' previous (non-ERROR) logs included in the email
+# * configured to log to a file as well otherwise stacktraces are lost
+services.TurbineLoggingService.email.destination.file=/logs/turbine.log
+services.TurbineLoggingService.email.destination.email.from=root@localhost
+services.TurbineLoggingService.email.destination.email.to=root@localhost
+services.TurbineLoggingService.email.destination.email.subject=Turbine Error Report
+services.TurbineLoggingService.email.destination.email.buffer.size=512
+services.TurbineLoggingService.email.className=org.apache.turbine.services.logging.Log4JavaLogger
+services.TurbineLoggingService.email.level=INFO
 
 
 # -------------------------------------------------------------------
@@ -37,7 +96,6 @@ services.TurbineLoggingService.system.level=INFO
 # -------------------------------------------------------------------
 
 mail.server=localhost
-#mail.server=mail.yourserver.com
 
 # -------------------------------------------------------------------
 # SMTP-From header for your outgoing messages
@@ -113,11 +171,11 @@ database.default.username=
 database.default.password=
 
 # The number of database connections to cache per ConnectionPool
-# instance.
+# instance (specified per database).
 database.default.maxConnections=3
 
 # The amount of time (in milliseconds) that database connections will be
-# cached.
+# cached (specified per database).
 #
 # Default: one hour = 60 * 60 * 1000
 
@@ -153,11 +211,12 @@ database.idbroker.cleverquantity=true
 
 # -------------------------------------------------------------------
 # 
-#  T E M P L A T E  S E T T I N G S
+#  F R A M E W O R K  S E T T I N G S
 #
 # -------------------------------------------------------------------
-# These are variables to set if you're using a template system
-# (Velocity, WebMacro, FreeMarker, etc.) with Turbine.
+# The are settings that control the behaviour of the framework,
+# such as determining whether a template system is in use, what
+# the default templates and screens are and session handling settings.
 # -------------------------------------------------------------------
 
 # Used to set the template homepage if you are using a template
@@ -165,15 +224,23 @@ database.idbroker.cleverquantity=true
 #
 # Default: /index.wm
 
-template.homepage=/Index.vm
+template.homepage=Index.vm
 
 # This is the default screen to show to people when they first access
-# the system.  You can override this by specifying module.packages to
-# include your own modules.
+# the system.  Specify one of the template screens such as VelocityScreen
+# to use a template system.
 #
 # Default: Login
 
-screen.homepage=VelocityScreen
+screen.homepage=
+
+# This is the template that is shown on an incorrect login attempt. 
+# Setting this property will override any value of screen.login specfied
+# below.
+#
+# Default: Login
+
+template.login=Login.vm
 
 # This is the page that is shown on an incorrect login attempt.  It is
 # referenced in the LoginUser action
@@ -182,12 +249,19 @@ screen.homepage=VelocityScreen
 
 screen.login=Login
 
+# This is the template that is used by the respective Template based 
+# ErrorScreen for displaying the error. If you are not using a Template based 
+# ErrorScreen, then this is ignored.
+#
+# Default: /Error.wm
+
+template.error=Error.vm
+
 # This is the default error screen.
 #
 # Default: Error
-#
 
-screen.error=VelocityErrorScreen
+screen.error=Error
 
 # This is the screen that is displayed when the user's web page is in
 # an invalid state.
@@ -222,10 +296,13 @@ action.logout=Logout
 
 action.sessionvalidator=sessionvalidator.TemplateSessionValidator
 
+# This is the timeout in seconds for sessions. If left commented out, the
+# servlet container's default timeout will be left as is.
+
+# session.timeout=1800
+
 # This is the default action that builds up the AccessControlList for
 # the individual users session.
-#
-# Default: AccessController
 
 action.accesscontroller=AccessController
 
@@ -287,6 +364,8 @@ database.maps.builder=org.apache.turbine.util.db.map.TurbineMapBuilder
 #  M E S S A G E S
 #
 # -------------------------------------------------------------------
+# Note that strings containing "," (comma) characters must backslash 
+# escape the comma (i.e. '\,')
 
 # The message that can be displayed before a user logs in.
 
@@ -318,6 +397,7 @@ logout.message=Thank you for using the system. Please come back soon.
 
 use.ssl=true
 
+
 # -------------------------------------------------------------------
 # 
 #  S E R V I C E S
@@ -328,29 +408,34 @@ use.ssl=true
 #
 # To specify properties of a service use the following syntax:
 # service.[name].[property]=[value]
+#
+# The order that these services is listed is important! The
+# order that is stated here is the order in which the services
+# will be initialized. Keep this is mind if you have services
+# that depend on other services during initialization.
 # -------------------------------------------------------------------
-
 services.TurbineResourceService.classname=org.apache.turbine.services.resources.TurbineResourceService
 services.TurbineLoggingService.classname=org.apache.turbine.services.logging.TurbineLoggingService
+services.TurbineFactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
 services.TurbinePoolService.classname=org.apache.turbine.services.pool.TurbinePoolService
 services.TurbineRunDataService.classname=org.apache.turbine.services.rundata.TurbineRunDataService
 services.TurbineServletService.classname=org.apache.turbine.services.servlet.TurbineServletService
 services.TurbineAssemblerBrokerService.classname=org.apache.turbine.services.assemblerbroker.TurbineAssemblerBrokerService
 services.TurbineLocalizationService.classname=org.apache.turbine.services.localization.TurbineLocalizationService
 services.TurbineGlobalCacheService.classname=org.apache.turbine.services.cache.TurbineGlobalCacheService
-#services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
+services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.TurbineSchedulerService
 #services.TurbineXmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.TurbineUniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.TurbineUploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
 services.TurbineSecurityService.classname=org.apache.turbine.services.security.DBSecurityService
 services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolBrokerService
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
-services.TurbineFactoryService.classname=org.apache.turbine.services.factory.TurbineFactoryService
 services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
 
 # Turn on the appropriate template service.
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
+
 services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 
 # -------------------------------------------------------------------
@@ -366,6 +451,7 @@ services.TurbineTemplateService.classname=org.apache.turbine.services.template.T
 services.TurbineRunDataService.default.run.data=org.apache.turbine.services.rundata.DefaultTurbineRunData
 services.TurbineRunDataService.default.parameter.parser=org.apache.turbine.util.parser.DefaultParameterParser
 services.TurbineRunDataService.default.cookie.parser=org.apache.turbine.util.parser.DefaultCookieParser
+
 
 # -------------------------------------------------------------------
 # 
@@ -437,6 +523,11 @@ services.TurbineTemplateService.default.screen=VelocityScreen
 
 services.TurbineTemplateService.default.layout.template=/default.vm
 
+# This is the template engine that the template service will delegate
+# template searching to.
+
+services.TurbineTemplateService.template.service.name=TurbineVelocityService
+
 
 # -------------------------------------------------------------------
 # 
@@ -456,25 +547,23 @@ services.TurbinePullService.tools.per.request.refresh=true
 # These tools will be made available to all your
 # templates. You list the tools in the following way:
 #
-# tool.<scope>.<id>.<load-order> = <classname>
+# tool.<scope>.<id> = <classname>
 #
 # <scope>      is the tool scope: global, request, session
 #              or persistent (see below for more details)
 # <id>         is the name of the tool in the context
-# <load-order> is specific to that scope and gives the order in which 
-#              tools are loaded
 #
 # For example:
 #
-# tool.global.ui.1    = org.apache.turbine.util.pull.UIManager
-# tool.global.mm.2    = org.apache.turbine.util.pull.MessageManager
-# tool.request.link.1 = org.apache.turbine.util.template.TemplateLink
-# tool.request.page.2 = org.apache.turbine.util.template.TemplatePageAttributes
+# tool.global.ui    = org.apache.turbine.util.pull.UIManager
+# tool.global.mm    = org.apache.turbine.util.pull.MessageManager
+# tool.request.link = org.apache.turbine.util.template.TemplateLink
+# tool.request.page = org.apache.turbine.util.template.TemplatePageAttributes
 #
 # (the next two examples specify mythical classes) 
 #
-# tool.session.basket.1 = org.sample.tools.ShoppingBasket
-# tool.persistent.ui.1  = org.sample.tools.PersistentUIManager
+# tool.session.basket = org.sample.tools.ShoppingBasket
+# tool.persistent.ui  = org.sample.tools.PersistentUIManager
 #
 #
 # Tools are accessible in all templates by the <id> given
@@ -598,7 +687,7 @@ locale.default.country=US
 
 # -------------------------------------------------------------------
 # 
-#  S C H E U D U L E R  S E R V I C E
+#  S C H E D U L E R  S E R V I C E
 #
 # -------------------------------------------------------------------
 
@@ -625,7 +714,18 @@ scheduler.enabled=false
 # Default: org.apache.turbine.om.security.TurbineUser
 #
 
-services.TurbineSecurityService.user.class=org.apache.turbine.om.security.TurbineUser
+services.TurbineSecurityService.user.class=org.tigris.scarab.om.ScarabUser
+
+#
+# This setting is DBSecurityService specific - this class is consulted for the names
+# of the columns in the users' tables for the purpose of creating join queries. 
+# If you use your own User implementation in conjunction with DBSecurityService,
+# it's peer class must implement org.apache.turbine.om.security.peer.UserPeer interface,
+# and you need to specify the name of the peer class here.
+#
+# Defalut: org.apache.turbine.om.security.peer.TurbineUserPeer
+#
+services.TurbineSecurityService.userPeer.class=org.tigris.scarab.peer.ScarabUserPeer
 
 #
 # This is the class that implements UserManager interface.
@@ -658,6 +758,7 @@ services.TurbineSecurityService.secure.passwords=true
 #
 
 services.TurbineSecurityService.secure.passwords.algorithm=SHA
+
 
 # -------------------------------------------------------------------
 # 
@@ -764,7 +865,7 @@ services.IntakeService.xml.path=WEB-INF/conf/intake.xml
 
 #--------------------------------------------------------------------
 #
-# P A R M E T E R  P A R S E R
+# P A R A M E T E R  P A R S E R
 #
 #--------------------------------------------------------------------
 #
