ThrowableStrRep.java is our internal string representation of throwables. It can be serialized contrary to regular throwables.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/spi/Makefile
+++ b/src/java/org/apache/log4j/spi/Makefile
@@ -11,6 +11,7 @@ JSOURCES:=OptionHandler.java\
 	ErrorCode.java\
 	CategoryFactory.java\
 	Configurator.java\
+        ThrowableStrRep.java\
 	TriggeringEventEvaluator.java\
 
 SUBDIRS := 
