added a velocity property that should allow changes in macros without having to restart the server.
added an url field to intake and switched the class for OptionId field to allow
a common error message macro.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.15 2001/03/27 04:48:08 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.16 2001/03/29 19:18:53 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -636,6 +636,8 @@ services.TurbineVelocityService.file.resource.loader.modificationCheckInterval =
 #services.TurbineVelocityService.resource.loader = classpath
 #services.TurbineVelocityService.classpath.resource.loader.description = Velocity Classpath Resource Loader
 #services.TurbineVelocityService.classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
+
+services.TurbineVelocityService.velocimacro.permissions.allow.inline.to.replace.global=true
 
 
 # -------------------------------------------------------------------
