--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.16 2001/03/29 19:18:53 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.17 2001/03/30 01:13:25 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -427,7 +427,7 @@ services.TurbineSchedulerService.classname=org.apache.turbine.services.schedule.
 #services.TurbineXmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.TurbineUniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.TurbineUploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
-services.TurbineSecurityService.classname=org.apache.turbine.services.security.DBSecurityService
+services.TurbineSecurityService.classname=org.apache.turbine.services.security.db.DBSecurityService
 services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolBrokerService
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
 services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
