added an email mask for the login-username, and modified the url attribute value to allow an empty field.
give the url error message in Wizard3.vm and fix variable name in Login.vm.


another package change from turbine needed in TR.props



PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.17 2001/03/30 01:13:25 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.18 2001/03/30 19:44:15 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -736,7 +736,7 @@ services.TurbineSecurityService.userPeer.class=org.tigris.scarab.peer.ScarabUser
 # Default implementation uses Peers and a relational database .
 #
 
-services.TurbineSecurityService.user.manager=org.apache.turbine.services.security.DBUserManager
+services.TurbineSecurityService.user.manager=org.apache.turbine.services.security.db.DBUserManager
 
 #
 # This is used by the SecurityService to make the password checking
