Add a checkbox to UI test runner so that user can switch between the standard and loading testcase class loader. [ #229753 ] assertEquals on NaN and Infinity does not work correctly [ #229287 ] Class Name too long "SimpleClassPathTestCollector" [ #229609 ] Stack Filtering missing in textui.TesRunner [ #229753 ] assertEquals on NaN and Infinity does not work correctly. [ #229870 ] Clicking on ... after tests failed gives NPE [ #229974 ] Incorrect icon shown for first element in Swing GUI [ #230581 ] swingui.TestTreeModel: results of decorated testcases... [ #230971 ] Make junit.extensions.TestDecorator.getTest() public [ #231569 ] DocBug: JUnit Test Infected: Programmers Love Writing Tests [ #232645 ] BaseTestRunner.getTest loses exception information [ #233094 ] TestSuite masks exceptions [ #410967 ] No icon provided for first test [ #230745 ] ClassPathTestCollector sometimes lists classes in duplicate

--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,8 @@
-<!-- JUnit build script using ant 2.0 -->
+<!-- JUnit build script using ant 1.3 -->
 <project name="junit" default="dist" basedir=".">
 	<target name="init">
 		<tstamp/>
-		<property name="version" value="3.5" />
+		<property name="version" value="3.6" />
 		<property name="dist"  value="junit${version}" />
 		<property name="versionfile"  value="junit/runner/Version.java" />
 		<property name="zipfile"  value="${dist}.zip" />
@@ -32,12 +32,12 @@
 		<jar 
 			jarfile="${dist}/src.jar"
 			basedir="."
-			excludes="junit/tests/**, junit/samples/**, **/*.class, doc/**, README.html, build.xml"
+			excludes="${dist}/src.jar, junit/tests/**, junit/samples/**, **/*.class, doc/**, README.html, build.xml"
 		/>
 		<jar 
 			jarfile="${dist}/junit.jar"
 			basedir="."
-			excludes="junit/tests/**, junit/samples/**, **/*.java, doc/**, README.html, jar-manifest.txt"
+			excludes="${dist}/junit.jar, junit/tests/**, junit/samples/**, **/*.java, doc/**, README.html, jar-manifest.txt"
 		/>
 		<copy todir="${dist}/junit/samples">
 			<fileset dir="junit/samples" />
@@ -78,9 +78,9 @@
 	<target name="zip">
 		<!-- !!! hard code names, variable substitution doesn't work !!! -->
 		<zip 
-			zipfile="junit3.5.zip"
+			zipfile="junit3.6.zip"
 			basedir="."
-			includes="junit3.5/**"
+			includes="junit3.6/**"
 		/>
 	</target>
 	
