keeping up with Turbine changes:
   jason re-worked the TemplateService stuff. the benefit is that now we
can have different template tools all going at the same time within
Turbine within the same servlet context. for example, we can have a
webmacro and a velocity and a jsp application all combined together
running transparently under turbine. way cool.

-jon

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.18 2001/03/30 19:44:15 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.19 2001/04/02 01:05:38 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -306,20 +306,6 @@ action.sessionvalidator=sessionvalidator.TemplateSessionValidator
 
 action.accesscontroller=AccessController
 
-# This is the default layout to apply.
-#
-# Default: DefaultLayout
-
-layout.default=VelocityECSLayout
-
-#
-# This is the default page module. You probably do not want to modify
-# this.
-#
-# Default: DefaultPage
-#
-page.default=ScarabPage
-
 # -------------------------------------------------------------------
 # 
 #  J N D I  C O N T E X T S
@@ -432,11 +418,11 @@ services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolB
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
 services.TurbinePullService.classname=org.apache.turbine.services.pull.TurbinePullService
 services.IntakeService.classname=org.apache.turbine.services.intake.TurbineIntakeService
+services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 
 # Turn on the appropriate template service.
 services.TurbineVelocityService.classname=org.apache.turbine.services.velocity.TurbineVelocityService
 
-services.TurbineTemplateService.classname=org.apache.turbine.services.template.TurbineTemplateService
 
 # -------------------------------------------------------------------
 #
@@ -483,51 +469,6 @@ services.TurbineAssemblerBrokerService.scheduledjob=org.apache.turbine.util.asse
 services.TurbineTemplateService.layout.cache.size=2
 services.TurbineTemplateService.navigation.cache.size=10
 services.TurbineTemplateService.screen.cache.size=50
-
-# The extension that will be used when constructing default template
-# names.  E.g. if set to wm the service will assume layout names of
-# "default.wm".
-#
-# Default: html
-
-services.TurbineTemplateService.default.extension=vm
-
-# The location of the templates.  This should be the same locations as
-# given for the template engine specific template path property.  For
-# jsdk 2.2 this can be relative to the webapp root.
-#
-# Default: /templates
-
-services.TurbineTemplateService.template.path=/templates
-
-# This is the default navigation module after none by the name Default
-# have been located.  Some possible values are WebMacroSiteNavigation
-# or BaseFreeMarkerNavigation.
-#
-# Default: none
-
-services.TurbineTemplateService.default.navigation=VelocityNavigation
-
-# This is the default screen module after none by the name Default
-# have been located.  Some possible values are WebMacroSiteScreen or
-# BaseFreeMarkerScreen.
-#
-# Default: none
-
-services.TurbineTemplateService.default.screen=VelocityScreen
-
-# This is the default layout template after none by the name
-# default.{default.extension} have been located.
-#
-# Default: /default.{default.extension}
-
-services.TurbineTemplateService.default.layout.template=/default.vm
-
-# This is the template engine that the template service will delegate
-# template searching to.
-
-services.TurbineTemplateService.template.service.name=TurbineVelocityService
-
 
 # -------------------------------------------------------------------
 # 
@@ -618,9 +559,14 @@ tool.ui.skin=default
 # These properties will override the default properties set by Velocity.
 # You should specify the path to the templates directories as well as 
 # the path to the log file and they should also be relative to webapp root
-#services.TurbineVelocityService.properties=/WEB-INF/conf/velocity.properties
-#services.TurbineVelocityService.log=/logs/velocity.log
-#services.TurbineVelocityService.templates=/templates
+
+services.TurbineVelocityService.template.extension=vm
+services.TurbineVelocityService.default.page = ScarabPage
+services.TurbineVelocityService.default.screen=VelocityScreen
+services.TurbineVelocityService.default.layout = VelocityECSLayout
+services.TurbineVelocityService.default.navigation=VelocityNavigation
+services.TurbineVelocityService.default.error.screen = VelocityErrorScreen
+services.TurbineVelocityService.default.layout.template = /Default.vm
 
 services.TurbineVelocityService.runtime.log=/logs/velocity.log
 #services.TurbineVelocityService.template.encoding=
