got login working and fixed a couple TR.props
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.19 2001/04/02 01:05:38 jon Exp $
+# $Id: TurbineResources.properties,v 1.20 2001/04/02 20:32:01 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -566,7 +566,7 @@ services.TurbineVelocityService.default.screen=VelocityScreen
 services.TurbineVelocityService.default.layout = VelocityECSLayout
 services.TurbineVelocityService.default.navigation=VelocityNavigation
 services.TurbineVelocityService.default.error.screen = VelocityErrorScreen
-services.TurbineVelocityService.default.layout.template = /Default.vm
+services.TurbineVelocityService.default.layout.template = /default.vm
 
 services.TurbineVelocityService.runtime.log=/logs/velocity.log
 #services.TurbineVelocityService.template.encoding=
@@ -673,7 +673,7 @@ services.TurbineSecurityService.user.class=org.tigris.scarab.om.ScarabUser
 #
 # Defalut: org.apache.turbine.om.security.peer.TurbineUserPeer
 #
-services.TurbineSecurityService.userPeer.class=org.tigris.scarab.peer.ScarabUserPeer
+services.TurbineSecurityService.userPeer.class=org.tigris.scarab.om.ScarabUserPeer
 
 #
 # This is the class that implements UserManager interface.
