Setup to enable easy use of the Log4jService but leave the legacy ConsoleLogging & FileLogging services as the default.

--- a/src/etc/conf/default/jboss.conf
+++ b/src/etc/conf/default/jboss.conf
@@ -1,23 +1,35 @@
 <MLET CODE = "org.jboss.logging.Logger" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
+<!-- The log dir needs to be in the classpath to allow location of log.properties -->
+<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+   <ARG TYPE="java.lang.String" VALUE="../../log/">
+</MLET>
+<!-- Place the config directory in the classpath -->
+<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
+   <ARG TYPE="java.lang.String" VALUE="./">
+</MLET>
 
+<!-- Logging services. Typically you should enable the the ConsoleLogging &
+	FileLogging mbeans or the Log4jService. Both can be enabled if desired
+	but the Log4jService can perform the ConsoleLogging & FileLogging
+	services in additional to that offered by the log4j package. -->
 <MLET CODE = "org.jboss.logging.ConsoleLogging" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
    <ARG TYPE="java.lang.String" VALUE="Information,Warning,Error">
    <ARG TYPE="java.lang.String" VALUE="[{2}] {4}">
 </MLET>
-
-<MLET CODE = "org.jboss.util.Info" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
-</MLET>
-
-<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
-   <ARG TYPE="java.lang.String" VALUE="../../log/">
-</MLET>
-
-
 <MLET CODE = "org.jboss.logging.FileLogging" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
    <ARG TYPE="java.lang.String" VALUE="Information,Debug,Warning,Error">
    <ARG TYPE="java.lang.String" VALUE="[{2}] {4}">
+</MLET>
+
+<!-- Uncomment to use the log4j based logging service and with the log4j.properties.
+	When this service is used the ConsoleLogging & FileLogging should be disabled.
+ -->
+<-- MLET CODE = "org.jboss.logging.Log4jService" ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
+<-- /MLET>
+
+<MLET CODE = "org.jboss.util.Info" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
 
 <MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
@@ -28,9 +40,6 @@
    <ARG TYPE="java.lang.String" VALUE="../../db/">
 </MLET>
 
-<MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
-   <ARG TYPE="java.lang.String" VALUE="./">
-</MLET>
 
 <!-- Uncomment to add Tomcat classes to classpath
   -- MLET CODE = "org.jboss.util.ClassPathExtension" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
