Only log INFO or higher msgs to the console

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -1,6 +1,9 @@
 # A log4j properties file suitable for replacing the
 # default JBoss ConsoleLogging & FileLogging mbeans.
+
 log4j.rootCategory=DEBUG, Default, Console
+
+### The server.log file appender
 log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
@@ -9,7 +12,9 @@ log4j.appender.Default.layout.ConversionPattern=[%x] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
 
+### The console appender
 log4j.appender.Console=org.apache.log4j.FileAppender
 log4j.appender.Console.File=System.out
+log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%x] %m%n
