Wizard2.vm (dedupe) is slightly functional now.  The search just returns all issues, to give some data for the left hand column.  Issue details will show up on the right hand side, though I have not added fields on other screens to set every attribute.
The form buttons do not work, but links which give the same functionality are present and functional.

user related attribute's (Assigned to:) are not implemented so I commented out
some sample data as it will give an error.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.20 2001/04/02 20:32:01 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.21 2001/04/04 08:43:48 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -532,7 +532,7 @@ services.TurbinePullService.tools.per.request.refresh=true
 #
 # Defaults: none
 
-tool.request.link=org.apache.turbine.util.template.TemplateLink
+tool.request.link=org.tigris.scarab.util.ScarabLink
 tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
 tool.request.content=org.apache.turbine.util.ContentURI
 tool.request.om=org.apache.turbine.om.OMTool
