added sql logging and changes to assembler service packages
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.21 2001/04/04 08:43:48 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.22 2001/04/05 19:18:38 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -20,7 +20,7 @@
 # destination.file: A path relative to the web app root
 # -------------------------------------------------------------------
 
-services.TurbineLoggingService.facilities=system,debug,security
+services.TurbineLoggingService.facilities=system,debug,security,sql
 services.TurbineLoggingService.default=system
 services.TurbineLoggingService.loggingConfig=org.apache.turbine.services.logging.PropertiesLoggingConfig
 
@@ -42,6 +42,13 @@ services.TurbineLoggingService.debug.destination.file=/logs/turbine.log
 services.TurbineLoggingService.debug.destination.console=true
 services.TurbineLoggingService.debug.className=org.apache.turbine.services.logging.FileLogger
 services.TurbineLoggingService.debug.level=INFO
+
+# A facility for SQL query logging
+# To enable SQL query logging, set the level to DEBUG
+services.TurbineLoggingService.sql.destination.file=/logs/turbine.log
+#services.TurbineLoggingService.sql.destination.console=true
+services.TurbineLoggingService.sql.className=org.apache.turbine.services.logging.FileLogger
+services.TurbineLoggingService.sql.level=ERROR
 
 # A facility for security audit. NOTE! As of 23 Jan 2001
 # Turbine does not have any standard security auditing
@@ -448,13 +455,13 @@ services.TurbineRunDataService.default.cookie.parser=org.apache.turbine.util.par
 # with TurbineAssemblerBrokerService
 # -------------------------------------------------------------------
 
-services.TurbineAssemblerBrokerService.screen=org.apache.turbine.util.assemblerbroker.java.JavaScreenFactory
-#services.TurbineAssemblerBrokerService.screen=org.apache.turbine.util.assemblerbroker.python.PythonScreenFactory
-services.TurbineAssemblerBrokerService.action=org.apache.turbine.util.assemblerbroker.java.JavaActionFactory
-services.TurbineAssemblerBrokerService.layout=org.apache.turbine.util.assemblerbroker.java.JavaLayoutFactory
-services.TurbineAssemblerBrokerService.page=org.apache.turbine.util.assemblerbroker.java.JavaPageFactory
-services.TurbineAssemblerBrokerService.navigation=org.apache.turbine.util.assemblerbroker.java.JavaNavigationFactory
-services.TurbineAssemblerBrokerService.scheduledjob=org.apache.turbine.util.assemblerbroker.java.JavaScheduledJobFactory
+services.TurbineAssemblerBrokerService.screen=org.apache.turbine.services.assemblerbroker.util.java.JavaScreenFactory
+#services.TurbineAssemblerBrokerService.screen=org.apache.turbine.services.assemblerbroker.util.python.PythonScreenFactory
+services.TurbineAssemblerBrokerService.action=org.apache.turbine.services.assemblerbroker.util.java.JavaActionFactory
+services.TurbineAssemblerBrokerService.layout=org.apache.turbine.services.assemblerbroker.util.java.JavaLayoutFactory
+services.TurbineAssemblerBrokerService.page=org.apache.turbine.services.assemblerbroker.util.java.JavaPageFactory
+services.TurbineAssemblerBrokerService.navigation=org.apache.turbine.services.assemblerbroker.util.java.JavaNavigationFactory
+services.TurbineAssemblerBrokerService.scheduledjob=org.apache.turbine.services.assemblerbroker.util.java.JavaScheduledJobFactory
 
 # -------------------------------------------------------------------
 # 
